--- a/applove/css/main.css
+++ b/applove/css/main.css
@@ -1,1 +1,126 @@
+/*CLASES REUTILIZABLES*/
+/*
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
+*:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0 auto;
+  font-size: 16px;
+  line-height: 1.71429;
+}
+
+img {
+  vertical-align: middle;
+}
+
+.container {
+  width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 14px;
+  padding-right: 14px;
+}
+
+.container:before, .container:after {
+  content: " ";
+  display: table;
+}
+
+*:before, *:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.container:after {
+  clear: both;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.mt-0 {
+  margin-top: 0px;
+}
+
+.m-0 {
+  margin: 0px;
+}
+
+a {
+  color: #373B47;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #E95853;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+*/
+/*ESCRIBE TU CÓDIGO DESDE AQUÍ*/
+
+body {
+  margin: 0;
+  font-size: 16px;
+  line-height: 1.71429;
+}
+
+header {
+
+  position: fixed;
+  background-color: #fff;
+  z-index: 0;
+
+}
+
+nav {
+  font: sans-serif;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  position: relative;
+}
+
+ul {
+  display: block;
+  list-style: none;
+  background-color: #fff;
+  line-height: 20px;
+  text-align: center;
+}
+
+li {
+  width: 100px;
+  display: inline-block;
+}
+
+a {
+  display: block;
+}
+
+footer {
+
+}
+
+#logo{
+  display: inline-block;
+  position: absolute;
+  left: 83%;
+  padding-bottom: 100px;
+  size: 12px;
+  display: block;
+  size: 2px;
+}
