--- a/nuestras coders/css/main.css
+++ b/nuestras coders/css/main.css
@@ -24,8 +24,8 @@ img {
 
 p {
   color: purple;
-  bottom: 20%;
-  display: inline-block;
-  text-align: center;
+  bottom: 40%;
+  display: block;
+  text-align: bottom;
 
 }
