--- a/applove/css/main.css
+++ b/applove/css/main.css
@@ -1,5 +1,5 @@
 /*CLASES REUTILIZABLES*/
-/*
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -16,6 +16,8 @@ body {
   margin: 0 auto;
   font-size: 16px;
   line-height: 1.71429;
+  font-family: 'Raleway', sans-serif;
+
 }
 
 img {
@@ -30,7 +32,8 @@ img {
   padding-right: 14px;
 }
 
-.container:before, .container:after {
+.container:before, .container:after { /*para ingresar contenido nuevo antes de un texto
+  y after para ingresar contenido nuevo despuès del texto*/
   content: " ";
   display: table;
 }
@@ -69,8 +72,55 @@ a:hover {
 .text-uppercase {
   text-transform: uppercase;
 }
-*/
+
 /*ESCRIBE TU CÓDIGO DESDE AQUÍ*/
+
+header {
+  position: fixed;
+  background-color: #fff;
+  width: 100%;
+  height: 100px;
+  z-index: 1000;
+  margin: 30px;
+}
+
+div > a {
+  display: inline-block;
+  background-color: #fff;
+  height: 30;
+  width: 100px;
+  display: inline-block;
+  text-align: right;
+  padding: rigth;
+  position: relative;
+}
+
+span {
+  bottom: 40%;
+  display: block;
+  text-align: bottom;
+}
+
+footer {
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 100px;
+  text-align: center;
+}
+
+#logo {
+    height: 50px;
+    left: 83%;
+    position: absolute;
+    width: 60px;
+    z-index: 0;
+}
+
+.pink {
+  background-color: #f67b74;
+}
+/* revisar lo que me pueda servir de la parte de abajo
 
 body {
   margin: 0;
@@ -79,10 +129,11 @@ body {
 }
 
 header {
-
   position: fixed;
   background-color: #fff;
+  width: 80%;
   z-index: 0;
+  margin: 0;
 
 }
 
@@ -92,6 +143,7 @@ nav {
   padding: 0;
   list-style: none;
   position: relative;
+  text-align: center;
 }
 
 ul {
@@ -99,8 +151,8 @@ ul {
   list-style: none;
   background-color: #fff;
   line-height: 20px;
-  text-align: center;
 }
+
 
 li {
   width: 100px;
@@ -112,15 +164,20 @@ a {
 }
 
 footer {
+  position: relative;
+  display: inline-block;
+  color: white;
+  width: 130%;
+  background-color: black;
+  text-align: center;
+  margin: 0;
 
 }
 
-#logo{
-  display: inline-block;
-  position: absolute;
+.logo{
+  height: 50px;
   left: 83%;
-  padding-bottom: 100px;
-  size: 12px;
-  display: block;
-  size: 2px;
+  position: absolute;
+  width: 50px;
+  z-index: 0;
 }
